# pyresample

./: .bandit  .bumpversion.cfg  .gitattributes  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .stickler.yml  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION  MANIFEST.in  README  README.md  RELEASING.md  appveyor.yml  azure-pipelines.yml  changelog.rst  changelog_pre1.9.1.rst  codecov.yml  pyproject.toml  readthedocs.yml  requirements.txt  run.py  setup.cfg  setup.py  versioneer.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  deploy-sdist.yaml  deploy.yaml
appveyor/: install.ps1  missing-headers.ps1  run_with_compiler.cmd
continuous_integration/: build-manylinux-wheels.sh  environment.yaml
docs/: Makefile  README.md  areas.yaml  environment.yml  requirements.txt
docs/source/: API.rst  conf.py  doi_role.py  geo_def.rst  geometry_utils.rst  grid.rst  index.rst  installation.rst  multi.rst  plot.rst  plot_cartopy_basemap.rst  plot_projections.rst  plot_quick_display.rst  preproc.rst  reference.rst  roadmap.rst  spherical_geometry.rst  swath.rst
pyresample/: __init__.py  _cache.py  _caching.py  _cartopy.py  _compat.py  _config.py  _formatting_html.py  _gradient_search.pyx  _multi_proc.py  _spatial_mp.py  area_config.py  bilinear.py  boundary.py  data_reduce.py  formatting_html.py  geo_filter.py  geometry.py  gradient_search.py  grid.py  image.py  kd_tree.py  plot.py  resampler.py  slicer.py  spherical.py  spherical_geometry.py  spherical_utils.py  swath.py  test_areas.yaml  test_resampler.py  utils.py  version.py
pyresample.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyresample/bilinear/: __init__.py  _base.py  _numpy_resampler.py  xarr.py
pyresample/boundary/: __init__.py  area_boundary.py  base_boundary.py  boundary_sides.py  geographic_boundary.py  legacy_boundary.py  planar_boundary.py  projection_boundary.py  sides.py  simple_boundary.py  spherical_boundary.py  utils.py
pyresample/bucket/: __init__.py
pyresample/cache/: __init__.py  base.py  memory.py
pyresample/ewa/: __init__.py  _fornav.cpp  _fornav.pyx  _fornav_templates.cpp  _fornav_templates.h  _legacy_dask_ewa.py  _ll2cr.c  _ll2cr.pyx  dask_ewa.py  ewa.py  fornav.py  ll2cr.py
pyresample/future/: __init__.py  resampler.py  resampler_registry.py
pyresample/gradient/: __init__.py  _gradient_search.c  _gradient_search.pyx
pyresample/test/: __init__.py  conftest.py  test_area_config.py  test_bilinear.py  test_boundary.py  test_bucket.py  test_cache.py  test_dask_ewa.py  test_dask_resampler.py  test_data_reduce.py  test_ewa_fornav.py  test_ewa_ll2cr.py  test_formatting.py  test_gcp_def.py  test_geometry.py  test_geometry_legacy.py  test_gradient.py  test_grid.py  test_image.py  test_kd_tree.py  test_plot.py  test_resample_blocks.py  test_resampler.py  test_resampler_registry.py  test_rotation.py  test_slicer.py  test_spatial_mp.py  test_spherical.py  test_spherical_geometry.py  test_spherical_utils.py  test_swath.py  (+3 more)
test/: test_geometry.py  test_grid.py  test_image.py  test_kd_tree.py  test_plot.py  test_spherical_geometry.py  test_swath.py  test_utils.py
tests/: test_geometry.py  test_grid.py  test_image.py  test_kd_tree.py  test_spherical_geometry.py  test_swath.py  test_utils.py
(+108 files in other folders)
