[build-system]
requires = ["setuptools", "wheel", "numpy>=2.0.0rc1,<2.3", "Cython>=3", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
exclude = ["versioneer.py", "pyresample/version.py"]

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = ["E", "W", "B", "D", "T10", "C90", "NPY"]
# Remove D416 when all docstrings have been converted to google-style
ignore = ["D107", "D416"]

[tool.ruff.lint.per-file-ignores]
"pyresample/test/*.py" = ["D102", "S101"]  # assert allowed in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.9"
# See https://github.com/python/mypy/issues/12286 for automatic multi-platform support
platform = "linux"
# platform = win32
# platform = darwin
plugins = ["numpy.typing.mypy_plugin"]
allow_untyped_decorators = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "pyresample/version.py"
versionfile_build = "pyresample/version.py"
tag_prefix = "v"

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
skip_gitignore = true
default_section = "THIRDPARTY"
known_first_party = "pyresample"
line_length = 120

[tool.coverage.run]
relative_files = true
omit = ["pyresample/version.py", "versioneer.py"]
